--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>IMAGE RANDOMIZER</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
 
     <link rel="stylesheet" href="css/main.css">
@@ -13,26 +13,30 @@
 
 <body class="container-fluid">
     <header class="row">
-        <div id="button1" class="row d-flex justify-content-center">
+        <div id="buttonShow" class="row d-flex justify-content-center">
             <button class="col-2 btn">
                 <h2>Rodyti</h2>
             </button>
         </div>
-        <div id="button1" class="row d-flex justify-content-center">
+        <div id="buttonMix" class="row d-flex justify-content-center">
             <button class="col-2 btn">
                 <h2>Maišyti</h2>
             </button>
         </div>
     </header>
-    <div id="images" class="row">
+    <!-- <div id="images" class="row">
         <div id="first-row" class="row">
-            <img id="iOne" src="" alt="">
+            <img id="iOne" src="img/iEight.jpg" alt="">
         </div>
 
     </div>
-
-
-    <script src="js/bootstrap.bundle.js"></script>
+--><div id="imagez">
+    <div id="images">
+      <!---->  <script src="js/bootstrap.bundle.js"></script>
+        <script src="js/myScript.js"></script>
+    </div>
+</div>
+    
 </body>
 
 </html>
