--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 
 <body class="container-fluid">
     <header class="row">
-        <div id="buttonShow" class="row d-flex justify-content-center">
-            <button class="col-2 btn">
+        <div id="" class="row d-flex justify-content-center">
+            <button id="buttonShow" class="col-2 btn">
                 <h2>Rodyti</h2>
             </button>
         </div>
-        <div id="buttonMix" class="row d-flex justify-content-center">
-            <button class="col-2 btn">
+        <div id="" class="row d-flex justify-content-center">
+            <button id="buttonMix" class="col-2 btn">
                 <h2>Maišyti</h2>
             </button>
         </div>
