--- a/index.html
+++ b/index.html
@@ -24,19 +24,13 @@
             </button>
         </div>
     </header>
-    <!-- <div id="images" class="row">
-        <div id="first-row" class="row">
-            <img id="iOne" src="img/iEight.jpg" alt="">
-        </div>
-
     </div>
---><div id="imagez">
-    <div id="images">
-      <!---->  <script src="js/bootstrap.bundle.js"></script>
+
+    <div id="images" class="">
+        <script src="js/bootstrap.bundle.js"></script>
         <script src="js/myScript.js"></script>
     </div>
-</div>
-    
+
 </body>
 
 </html>
